Working WithAbstraction-Lab

--- a/OOPCSharpExercises.csproj
+++ b/OOPCSharpExercises.csproj
@@ -48,21 +48,32 @@
         <Compile Include="01.DefiningClasses-Lab\Person\Startup.cs" />
         <Compile Include="01.DefiningClasses-Lab\TestClient\BackAccount.cs" />
         <Compile Include="01.DefiningClasses-Lab\TestClient\Startup.cs" />
-        <Compile Include="DefiningClasses-Exercises\01.DefineClassPerson\Person.cs" />
-        <Compile Include="DefiningClasses-Exercises\01.DefineClassPerson\StartUp.cs" />
-        <Compile Include="DefiningClasses-Exercises\02.CreatingConstructors\Person.cs" />
-        <Compile Include="DefiningClasses-Exercises\02.CreatingConstructors\Startup.cs" />
-        <Compile Include="DefiningClasses-Exercises\03.OldestFamilyMember\Family.cs" />
-        <Compile Include="DefiningClasses-Exercises\03.OldestFamilyMember\Person.cs" />
-        <Compile Include="DefiningClasses-Exercises\03.OldestFamilyMember\Startup.cs" />
-        <Compile Include="DefiningClasses-Exercises\04.OpinionPoll\Person.cs" />
-        <Compile Include="DefiningClasses-Exercises\04.OpinionPoll\Startup.cs" />
-        <Compile Include="DefiningClasses-Exercises\05.DataModifier\DataModifier.cs" />
-        <Compile Include="DefiningClasses-Exercises\05.DataModifier\Startup.cs" />
-        <Compile Include="DefiningClasses-Exercises\06.CompanyRoster\Employee.cs" />
-        <Compile Include="DefiningClasses-Exercises\06.CompanyRoster\Startup.cs" />
-        <Compile Include="DefiningClasses-Exercises\07.SpeedingRacing\Car.cs" />
-        <Compile Include="DefiningClasses-Exercises\07.SpeedingRacing\Startup.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\01.DefineClassPerson\Person.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\01.DefineClassPerson\StartUp.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\02.CreatingConstructors\Person.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\02.CreatingConstructors\Startup.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\03.OldestFamilyMember\Family.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\03.OldestFamilyMember\Person.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\03.OldestFamilyMember\Startup.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\04.OpinionPoll\Person.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\04.OpinionPoll\Startup.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\05.DataModifier\DataModifier.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\05.DataModifier\Startup.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\06.CompanyRoster\Employee.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\06.CompanyRoster\Startup.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\07.SpeedingRacing\Car.cs" />
+        <Compile Include="02.DefiningClasses-Exercises\07.SpeedingRacing\Startup.cs" />
+        <Compile Include="03.WorkingWithAbstraction-Lab\01.RhombusOfStars\Startup.cs" />
+        <Compile Include="03.WorkingWithAbstraction-Lab\02.PointInRectangle\Point.cs" />
+        <Compile Include="03.WorkingWithAbstraction-Lab\02.PointInRectangle\Rectangle.cs" />
+        <Compile Include="03.WorkingWithAbstraction-Lab\02.PointInRectangle\Starup.cs" />
+        <Compile Include="03.WorkingWithAbstraction-Lab\03.StudentSystem\Startup.cs" />
+        <Compile Include="03.WorkingWithAbstraction-Lab\03.StudentSystem\Student.cs" />
+        <Compile Include="03.WorkingWithAbstraction-Lab\03.StudentSystem\StudentSystem.cs" />
+        <Compile Include="03.WorkingWithAbstraction-Lab\04.HotelReservation\Enums\DiscountType.cs" />
+        <Compile Include="03.WorkingWithAbstraction-Lab\04.HotelReservation\Enums\Season.cs" />
+        <Compile Include="03.WorkingWithAbstraction-Lab\04.HotelReservation\PriceCalculator.cs" />
+        <Compile Include="03.WorkingWithAbstraction-Lab\04.HotelReservation\Startup.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
